# VecGeom

./: .gitignore  CMakeLists.txt  INSTALL.md  Jenkinsfile  Overview.md  README.md  VecGeomConfig.cmake.in
CMSGeom/: CMakeLists.txt
CMSGeom/cmake/modules/: FindVc.cmake  FindVecGeom.cmake
CMSGeom/src/: geomconstr_createdetector.cpp  geomconstr_lvol_part0.cpp  geomconstr_placedvol_part0.cpp  geomconstr_placedvol_part1.cpp  geomconstr_placedvol_part2.cpp  geomconstr_placedvol_part3.cpp  geomconstr_placedvol_part4.cpp  geomconstr_trans_part0.cpp  geomconstr_trans_part1.cpp  geomconstr_trans_part2.cpp  geomconstr_trans_part3.cpp
CMSGeom/test/: TestDynamicLoad.cpp
USolids/: CMakeLists.txt
USolids/cmake/modules/: FindVecGeom.cmake
USolids/include/: UPolyhedra.hh
VecCore/: CMakeLists.txt
VecCore/cmake/: CUDA.cmake
VecCore/examples/: quadratic.cc
VecCore/inc/: VariableSizeObj.h
VecCore/test/: backend.cc  limits.cc  mathtest.cc
VecGeom/base/: Algorithms.h  Config.h.in  Cuda.h  Global.h  Transformation3D.h  Vector3D.h
VecGeom/benchmarking/: BenchmarkResult.h  Benchmarker.h  Color.h  Raytracer.h  VolumePointers.h
VecGeom/management/: CudaManager.h  G4GeoManager.h  GeoManager.h  GeoVisitor.h  NavIndexTable.h  TransformationSpecializations.icc  VolumeFactory.h
VecGeom/navigation/: HybridNavigator2.h  NavStateIndex.h  NavStatePath.h  NavigationState.h  NewSimpleNavigator.h  SimpleABBoxNavigator.h  VLevelLocator.h  VNavigator.h  VSafetyEstimator.h  VoxelSafetyEstimator.h
VecGeom/surfaces/: BrepHelper.h  CommonTypes.h  Equations.h  FrameMasks.h  Model.h  Navigator.h  SurfData.h  tests.h
VecGeom/volumes/: BooleanVolume.h  Box.h  CoaxialCones.h  Cone.h  CutTube.h  Ellipsoid.h  EllipticalCone.h  EllipticalTube.h  Extruded.h  ExtrudedStruct.h  GenTrap.h  GenericPolycone.h  Hype.h  LogicalVolume.h  MultiUnion.h  Orb.h  Paraboloid.h  Parallelepiped.h  PlacedAssembly.h  PlacedBooleanVolume.h  PlacedBox.h  PlacedCoaxialCones.h  PlacedCone.h  PlacedCutTube.h  PlacedEllipsoid.h  PlacedEllipticalCone.h  PlacedEllipticalTube.h  PlacedExtruded.h  PlacedGenTrap.h  PlacedGenericPolycone.h  PlacedHype.h  PlacedImplAs.h  PlacedMultiUnion.h  PlacedOrb.h  PlacedParaboloid.h  PlacedParallelepiped.h  PlacedPolycone.h  PlacedPolyhedron.h  PlacedRootVolume.h  PlacedSExtru.h  (+64 more)
backend/: Backend.h
backend/cuda/: Backend.h
backend/mic/: Backend.h
backend/scalar/: Backend.h
backend/umesimd/: Backend.h
backend/vc/: Backend.h
base/: AOS3D.h  AlignedBase.h  Array.h  Global.h  LorentzVector.h  RNG.h  SOA3D.h  Transformation3D.h  Vector.h  Vector3D.h  fp_exception_glibc_extension.h
benchmarking/: Benchmarker.h  NavigationBenchmarker.h
cmake/modules/: CeleritasUtils.cmake  CudaRdcUtils.cmake  FindCMSGeom.cmake  FindUSolids.cmake  MacroUtilities.cmake
doc/: performanceHistory.md
doc/doxygen/: Doxyfile.in
jenkins/: getCompatiblePlatform.py  jk-setup.sh  setup.py  vecgeom-ctest.cmake
management/: ABBoxManager.h  CudaManager.h  EmbreeManager.h  GeoManager.h  HybridManager2.h  RootGeoManager.h
navigation/: ABBoxNavigator.h  EmbreeNavigator.h  GlobalLocator.h  HybridNavigator2.h  NavStatePool.h  NavigationState.h  NewSimpleNavigator.h  SimpleABBoxLevelLocator.h  SimpleABBoxNavigator.h  SimpleABBoxSafetyEstimator.h  SimpleLevelLocator.h  SimpleNavigator.h  SimpleSafetyEstimator.h  VNavigator.h
persistency/gdml/: CMakeLists.txt
persistency/root/: CMakeLists.txt  RootPersistencyProxy.cpp
persistency/root/include/: Classes.h  RootPersistencyProxy.h  classes.hh
persistency/root/test/: CMakeLists.txt  GeoManagerTest.cpp  LogicalTest.cpp  Proxy.cpp  RootPersistencyComponentsTest.cpp  RootPersistencyTest.cpp  UnplacedTest.cpp  VectorTest.cpp  proxy.cpp  test_fullgeo.cpp  test_unplacedvol.cpp  unplaced_test.cpp  vector_test.cpp
persistency/root/test/include/: GeoManagerTest.h  RootPersistencyComponentsTest.h  RootPersistencyTest.h  test_fullgeo.hh  test_unplacedvol.hh
persistency/root/xml/: Selection.xml  selection.xml
scripts/: benchmark.py  config.sh
services/: CompNavStatePools.cpp  LibraryGenerator.cpp  NavigationSpecializer.cpp  NavigationSpecializer.h  NavigationSpecializerTest.cpp  SpecNavServices.cpp  SpecNavServices.h  produceSpecializedNavigatorLib.sh
source/: ABBoxManager.cpp  ABBoxNavigator.cpp  CppExporter.cpp  CudaManager.cpp  CudaManager.cu  EmbreeManager.cpp  FlatVoxelManager.cpp  G4GeoManager.cpp  GeoManager.cpp  HybridManager2.cpp  LogicalVolume.cpp  NavIndexTable.cpp  NavStateIndex.cpp  NavStatePath.cpp  NavigationState.cpp  NewSimpleNavigator.cpp  PlacedAssembly.cpp  PlacedBooleanVolume.cpp  PlacedBox.cpp  PlacedCoaxialCones.cpp  PlacedCone.cpp  PlacedCutTube.cpp  PlacedEllipsoid.cpp  PlacedEllipticalCone.cpp  PlacedEllipticalTube.cpp  PlacedExtruded.cpp  PlacedGenTrap.cpp  PlacedGenericPolycone.cpp  PlacedHype.cpp  PlacedMultiUnion.cpp  PlacedOrb.cpp  PlacedParaboloid.cpp  PlacedParallelepiped.cpp  PlacedPolycone.cpp  PlacedPolyhedron.cpp  PlacedRootVolume.cpp  PlacedSExtru.cpp  PlacedScaledShape.cpp  PlacedSphere.cpp  PlacedTessellated.cpp  (+51 more)
source/benchmarking/: BenchmarkResult.cpp  Benchmarker.cpp  NavBenchmarker.cu  NavigationBenchmarker.cpp  NavigationBenchmarker.cu  RaytraceBenchmark.cu  Raytracer.cpp  Raytracer.cu  Raytracer1.cu  VolumePointers.cpp
test/: CMakeLists.txt
volumes/: BooleanStruct.h  BoxStruct.h  ConeStruct.h  ExtrudedStruct.h  GenTrapStruct.h  LogicalVolume.h  MultiUnionStruct.h  PlacedAssembly.h  PlacedBooleanVolume.h  PlacedBox.h  PlacedCone.h  PlacedOrb.h  PlacedParaboloid.h  PlacedParallelepiped.h  PlacedPolycone.h  PlacedPolyhedron.h  PlacedRootVolume.h  PlacedSphere.h  PlacedTorus.h  PlacedTorus2.h  PlacedTrapezoid.h  PlacedTrd.h  PlacedTube.h  PlacedVolImplHelper.h  PlacedVolume.h  PlanarPolygon.h  Planes.h  PolyconeHistorical.h  PolyconeStruct.h  PolygonalShell.h  PolyhedronStruct.h  QuadrilateralCFacet.h  Quadrilaterals.h  ScalarShapeImplementationHelper.h  ShapeImplementationHelper.h  SpecializedBooleanVolume.h  SpecializedPlacedVolImplHelper.h  SpecializedPolyhedron.h  SpecializedTorus.h  SpecializedTorus2.h  (+37 more)
(+209 files in other folders)
